syntax = "proto3";
option java_multiple_files = true;
package com.learn.grpc;
import "google/protobuf/timestamp.proto";

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}


message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc hello(HelloRequest) returns (HelloResponse);
    rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}

message ChatMessage {
    string from = 1;
    string message = 2;
}

message ChatMessageFromServer {
    google.protobuf.Timestamp timestamp = 1;
    ChatMessage message = 2;
}