syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.learn.grpc.compute";


service ComputeService {
    rpc createServer (CreateServerRequest) returns (Server);
    rpc rebootServer (RebootServerRequest) returns (RebootServerResponse);
    rpc listServers (GetServersRequest) returns (stream Server);
    rpc subscribeForServerStatusNotifications (GetServerStatus) returns (stream ServerStatusResponse);
    rpc createServerBulk(stream CreateServerRequest) returns (CreateServerBulkResponse);
}

enum ServerStatus {
    RUNNING = 0;
    STOPPED = 1;
    ERROR = 2;
}

message Server {
    int64 id = 1;
    string accessIP = 2;
    string serverName = 3;
    int32 cpu = 4;
    string host = 5;
    ServerStatus status = 6;
}

message CreateServerRequest {
    Server server = 1;
}

message RebootServerRequest {
    int64 serverId = 1;
}

message RebootServerResponse {
    Server server = 1;
}

message GetServersRequest {
    // add some filters here
}

message GetServerStatus {
    int64 serverId = 1;
}

message ServerStatusResponse {
    ServerStatus status = 1;
}

message CreateServerBulkResponse {
    int64 numberOfServers = 1;
    repeated Server servers = 2;
    int64 elapsedSec = 3;
}